# AI-powered-Resume-ATS-score-checker-

./: Job_Description.txt  app.py  pyproject.toml
static/: style.css
templates/: index.html
