[tool.poetry]
name = "AI_Powered_Resume_Score_Checker"
version = "0.1.0"
description = "The ATS Resume Score Checker AI evaluates a resume against a given job description by analyzing keyword relevance, formatting compliance, and section structure to determine its ATS compatibility score."
authors = ["Karthika Krishna M"]
readme = "README.md"
packages = [{include = "AI_Powered_Resume_Score_Checker"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"  # Your previous file had Python 3.13, which is not stable yet!
flask = ">=3.1.0,<4.0.0"
sentence-transformers = ">=3.4.1,<4.0.0"
pymupdf = ">=1.25.4,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
gunicorn = "^21.2.0"  # Required for deploying on Render

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
